--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - ./config/apache2:/etc/apache2
     ports:
       - "127.0.0.1:51210:80"
+    networks:
+      - nw_csgengine
   db:
     image: mariadb:10.7.1
     volumes:
@@ -19,6 +21,12 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root_password
+    networks:
+      - nw_csgengine
 
 volumes:
   maria_data:
+
+networks:
+  nw_csgengine:
+    driver: bridge
